# caloreat-backend-ECR-ECS-CI-CD-Docker

./: .dockerignore  .env.dev  .env.example  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/versions/: 2525031a5653_initial_migration.py  4124031a104d_test_feat_user_branch.py
app/core/: auth.py  jwt_context.py  settings.py
app/db/: database.py
app/db/crud/: __init__.py  user.py  user_allergy.py  user_health_condition.py  user_profile.py
app/db/models/: __init__.py  user.py  user_allergy.py  user_health_condition.py  user_health_conditions.py  user_profile.py
app/db/schemas/: user.py  user_allergy.py  user_health_condition.py  user_profile.py
app/routers/: __init__.py  user.py  user_allergy.py  user_health_condition.py  user_profile.py
app/services/: __init__.py  user.py  user_allergy.py  user_health_condition.py  user_profile.py  user_profile_form.py
tests/: test_main.py
